# ChangeLog for dev-java/spymemcached
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*spymemcached-2.9.1 (05 Sep 2013)

  05 Sep 2013; Johann Schmitz <ercpe@gentoo.org> +spymemcached-2.9.1.ebuild,
  metadata.xml:
  Added fixed ebuild for spymemcached

  15 Jun 2013; Johann Schmitz <johann@j-schmitz.net> spymemcached-2.9.0.ebuild:
  Making repoman happy