@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  24 Sep 2013; Johann Schmitz <ercpe@gentoo.org> spymemcached-2.9.0.ebuild,
+  spymemcached-2.9.1.ebuild:
+  Corrected dependencies in spymemcached
+
 *spymemcached-2.9.1 (05 Sep 2013)
 
   05 Sep 2013; Johann Schmitz <ercpe@gentoo.org> +spymemcached-2.9.1.ebuild,
